# iree-experimental

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  requirements.txt  setup_venv.sh
.github/: dco.yml
.github/workflows/: benchmark_xla.yml  benchmark_xla_gpu.yml  regression_tests.yml  run_comparative_benchmarks.yml
ModelCompiler/: README.md
ModelCompiler/nlp_models/: bert_large_gen.py  bert_large_run.py  bert_large_tf.py  bert_small_gen.py  bert_small_run.py  huggingface_MiniLM_run.py
async/: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md  iree_compiler_plugin_group.cmake
async/compiler/src/: CMakeLists.txt
async/compiler/src/openxla/compiler/Dialect/: CMakeLists.txt  PluginRegistration.cpp
async/compiler/src/openxla/compiler/Dialect/Async/: CMakeLists.txt
async/compiler/src/openxla/compiler/Dialect/Async/Conversion/: CMakeLists.txt  ConvertAsyncToRuntime.cpp  ConvertAsyncToRuntime.h
async/compiler/src/openxla/compiler/Dialect/Async/IR/: Async.cpp  Async.h  AsyncDialect.td  AsyncOps.td  AsyncTypes.td  CMakeLists.txt
async/compiler/src/openxla/compiler/Dialect/Async/IR/test/: CMakeLists.txt  ops.mlir  verify.mlir
async/compiler/src/openxla/compiler/Dialect/Async/Transforms/: AsyncToAsyncRuntime.cpp  CMakeLists.txt  Passes.h  Passes.td
async/compiler/src/openxla/compiler/Dialect/Async/Transforms/test/: CMakeLists.txt  async_to_runtime.mlir
async/runtime/: CMakeLists.txt
async/runtime/src/: CMakeLists.txt
async/runtime/src/openxla/runtime/async/: CMakeLists.txt  api.h  async_runtime.cpp  async_runtime.h  async_runtime_cc.h  async_runtime_test.cpp  async_runtime_test.h  exports.inl  loop_async.c  loop_async.h  module.c  module.h  module_test.cpp
async/runtime/src/openxla/runtime/async/test/: CMakeLists.txt  module_test.mlir  token.mlir  value.mlir
async/runtime/src/openxla/runtime/async_test/: CMakeLists.txt  module.cpp
async/tools/: CMakeLists.txt  openxla-runner.c
bugs/: .gitignore  issue_10230.py  issue_7623.py  issue_9268.py  issue_9282.py  issue_9284.py  issue_9290.py  issue_9291.py  issue_9669.py  lit.cfg.py
cpp/: .clang-format  CMakeLists.txt  README.md
cpp/ml_overlay/: CMakeLists.txt  TODO.md  filters.mlir  filters.vmfb  overlay.cc
cpp/vision_inference/: CMakeLists.txt  README.md  image_util.c  image_util.h  iree-run-mnist-module.c
cpp/vulkan_gui/: CMakeLists.txt  vulkan_inference_gui.cc
cudnn-dialect/: CMakeLists.txt  GTC2023.md  README.md
cudnn-dialect/cudnn-opt/: CMakeLists.txt  cudnn-opt.cpp
cudnn-dialect/lib/: CMakeLists.txt
cudnn-dialect/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
examples/: README.md  basic_examples.py  bert.py  bert_coremml.py  hugging_face_models.py  minilm.py  resnet50.py  shark_runner.py  torch_vision_models.py
iree-jax/: README.md
iree-jax/benchmark/: README.md  benchmark_all.sh  benchmark_all_iree_pjrt.sh  benchmark_model.py  setup_venv.sh
iree-jax/examples/: aqt_dense_simulated.py  aqt_matmul_native.py  aqt_matmul_simulated.py  aqt_resnet.py  high_level_mnist_export.py  run_trainer.py  simple_aqt_matmul.py  simple_line_model.py  staged_mnist_export.py
iree-prof-tools/: CMakeLists.txt  README.md  graph-util.cc  graph-util.h  graph.cc  graph.h  iree-prof-convert.cc  iree-prof-output-chrome.cc  iree-prof-output-chrome.h  iree-prof-output-stdout.cc  iree-prof-output-stdout.h  iree-prof-output-tracy.cc  iree-prof-output-tracy.h  iree-prof-output-utils.cc  iree-prof-output-utils.h  iree-prof-output.cc  iree-prof-output.h  iree-prof.cc  iree-vis.cc
iree-prof-tools/model-explorer-extension/: .gitignore  README.md  package.json  tsconfig.json
iree-prof-tools/model-explorer-extension/src/: extension.ts  graphUtil.ts  mlirUtil.ts  modelExplorer.ts
iree-tf/benchmark/: README.md  benchmark_all.sh  benchmark_model.py  benchmark_models.py  requirements.txt  setup_venv.sh
iree-torch/: README.md  torchscript_e2e_config.py
iree-torch/benchmark/: README.md  benchmark_all.sh  benchmark_model.py  requirements.txt  setup_venv.sh
iree-torch/importer/: requirements.txt  setup_venv.sh  torch_importer.py  update_torch_models.sh
nn_api/: README.md
nn_api/examples/: high_level_mnist_export.py  jax_mnist_model.py  low_level_mnist_export.py  run_trainer.py
nn_api/test/: annotations_test.py  low_level_import_test.py
openxla-nvgpu/: .gitignore  CMakeLists.txt  README.md
openxla-nvgpu/tools/: openxla-runner.c
pjrt-plugin/: .bazelrc  BUILD  README.md  WORKSPACE  entry_point.cc  pjrt_plugin_defs.h  pjrt_plugin_exports.h  pjrt_plugin_impl.cc  pjrt_plugin_impl.h
pjrt-plugin/test/: test_cpu.py  test_cuda.py  test_simple.py
pre-release/python/: .gitignore  .style.yapf  README.md  setup_venv.sh
pydm/: README.md
pydm/simple/: arithmetic.py  basic_sample.py  bool_conversions.py  fibonacci.py  lists.py  runtime_errors.py  simple_lang.py
runtime-library/: .gitignore  CMakeLists.txt  README.md  create_xcframework.sh  test_api.c
scripts/integrate/: bump_llvm.py  iree_modules.py  iree_utils.py  patch_module.py
tflitehub/: README.md  albert_test.py  asr_conformer_test.py  bird_classifier_test.py  cartoon_gan_test.py  craft_text_test.py  deeplab_v3.py  deeplab_v3_test.py  densenet_test.py  east_text_detector_test.py  efficientnet_lite0_int8_test.py  efficientnet_lite0_test.py  efficientnet_test.py  gpt2_test.py  image_stylization_test.py  inception_v4_test.py  inception_v4_uint8_test.py  keras_ocr_test.py  lightning_fp16_test.py  lightning_i8_test.py  lightning_test.py  lit.cfg.py  magenta_test.py  manual_test.py  midas_test.py  mirnet_test.py  mnasnet_test.py  mobilebert_edgetpu_s_float_test.py  mobilebert_edgetpu_s_quant_test.py  mobilebert_test.py  mobilebert_tf2_float_test.py  mobilebert_tf2_quant_test.py  mobilenet_quant_test.py  mobilenet_ssd_quant_test.py  mobilenet_v1_test.py  mobilenet_v1_uint8_test.py  mobilenet_v2_int8_test.py  mobilenet_v2_test.py  mobilenet_v2_uint8_test.py  mobilenet_v3-large_test.py  (+21 more)
torch-iree/: README.md
transform_dialect/: README.md  benchmark_linalg_reductions.stub.mlir  bert_preprocessing_spec.mlir  scripts.sh
(+224 files in other folders)
